@@ -1,8 +1,37 @@
 package datawave.ingest.mapreduce;
 
+import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Set;
+import java.util.SortedMap;
+import java.util.Stack;
+import java.util.TreeMap;
+import java.util.concurrent.TimeUnit;
+
+import org.apache.accumulo.core.data.Mutation;
+import org.apache.accumulo.core.data.Value;
+import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.mapreduce.Counter;
+import org.apache.hadoop.mapreduce.CounterGroup;
+import org.apache.hadoop.mapreduce.Counters;
+import org.apache.hadoop.mapreduce.InputSplit;
+import org.apache.hadoop.mapreduce.lib.input.FileSplit;
+import org.apache.log4j.Logger;
+import org.apache.log4j.NDC;
+
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.HashMultimap;
 import com.google.common.collect.Multimap;
+
 import datawave.data.normalizer.DateNormalizer;
 import datawave.ingest.data.RawRecordContainer;
 import datawave.ingest.data.Type;
@@ -41,32 +70,6 @@ import datawave.ingest.validation.FieldValidator;
 import datawave.marking.MarkingFunctions;
 import datawave.util.StringUtils;
 import datawave.util.time.TraceStopwatch;
-import org.apache.accumulo.core.data.Mutation;
-import org.apache.accumulo.core.data.Value;
-import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.mapreduce.Counter;
-import org.apache.hadoop.mapreduce.CounterGroup;
-import org.apache.hadoop.mapreduce.Counters;
-import org.apache.hadoop.mapreduce.InputSplit;
-import org.apache.hadoop.mapreduce.lib.input.FileSplit;
-import org.apache.log4j.Logger;
-import org.apache.log4j.NDC;
-
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
-import java.util.SortedMap;
-import java.util.Stack;
-import java.util.TreeMap;
-import java.util.concurrent.TimeUnit;
 
 /**
  *
@@ -92,74 +95,74 @@ import java.util.concurrent.TimeUnit;
  *            output value
  */
 public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDEnabledMapper<K1,V1,K2,V2> {
-    
+
     private static final String SRC_FILE_DEL = "|";
-    
+
     private static final Logger log = Logger.getLogger(EventMapper.class);
-    
+
     /**
      * number which will be used to evaluate whether or not an Event should be processed. If the Event.getEventDate() is greater than (now - interval) then it
      * will be processed.
      */
     public static final String DISCARD_INTERVAL = "event.discard.interval";
-    
+
     public static final String CONTEXT_WRITER_CLASS = "ingest.event.mapper.context.writer.class";
     public static final String CONTEXT_WRITER_OUTPUT_TABLE_COUNTERS = "ingest.event.mapper.context.writer.output.table.counters";
     public static final String FILE_NAME_COUNTERS = "ingest.event.mapper.file.name.counters";
-    
+
     protected boolean createSequenceFileName = true;
-    
+
     protected boolean trimSequenceFileName = true;
-    
+
     protected boolean createRawFileName = true;
-    
+
     public static final String LOAD_DATE_FIELDNAME = "LOAD_DATE";
-    
+
     public static final String SEQUENCE_FILE_FIELDNAME = "ORIG_FILE";
-    
+
     public static final String LOAD_SEQUENCE_FILE_NAME = "ingest.event.mapper.load.seq.filename";
-    
+
     public static final String TRIM_SEQUENCE_FILE_NAME = "ingest.event.mapper.trim.sequence.filename";
-    
+
     public static final String RAW_FILE_FIELDNAME = "RAW_FILE";
-    
+
     public static final String LOAD_RAW_FILE_NAME = "ingest.event.mapper.load.raw.filename";
-    
+
     public static final String ID_FILTER_FSTS = "ingest.event.mapper.id.filter.fsts";
-    
+
     protected Map<String,List<DataTypeHandler<K1>>> typeMap = new HashMap<>();
-    
+
     /**
      * might as well cache the discard interval
      */
     protected Map<String,Long> dataTypeDiscardIntervalCache = new HashMap<>();
-    
+
     private FileSplit split = null;
-    
+
     private long interval = 0l;
-    
+
     private static Now now = Now.getInstance();
-    
+
     private StandaloneStatusReporter reporter = new StandaloneStatusReporter();
-    
+
     private DateNormalizer dateNormalizer = new DateNormalizer();
-    
+
     private ContextWriter<K2,V2> contextWriter = null;
-    
+
     protected long offset = 0;
-    
+
     protected String splitStart = null;
-    
+
     Multimap<String,FieldValidator> validators;
-    
+
     protected Set<String> sequenceFileNames = new HashSet<>();
-    
+
     protected MarkingFunctions markingFunctions;
-    
+
     private boolean metricsEnabled = false;
     private MetricsService<K2,V2> metricsService;
     private ReusableMetricsLabels metricsLabels;
-    
+
     /**
      * Set up the datatype handlers
      */
@@ -167,7 +170,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
     @Override
     public void setup(Context context) throws IOException, InterruptedException {
         super.setup(context);
-        
+
         InputSplit is = context.getInputSplit();
         if (is instanceof FileSplit)
             split = (FileSplit) is;
@@ -177,24 +180,24 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             splitStart = Long.valueOf(split.getStart()).toString();
         } else
             splitStart = null;
-        
+
         // Needed for side-effects
         markingFunctions = MarkingFunctions.Factory.createMarkingFunctions();
-        
+
         // Initialize the Type Registry
         TypeRegistry.getInstance(context.getConfiguration());
-        
+
         interval = context.getConfiguration().getLong(DISCARD_INTERVAL, 0l);
-        
+
         // default to true, but it can be disabled
         createSequenceFileName = context.getConfiguration().getBoolean(LOAD_SEQUENCE_FILE_NAME, true);
-        
+
         trimSequenceFileName = context.getConfiguration().getBoolean(TRIM_SEQUENCE_FILE_NAME, true);
-        
+
         createRawFileName = context.getConfiguration().getBoolean(LOAD_RAW_FILE_NAME, true);
-        
+
         Class<? extends KeyValueFilter<K2,V2>> firstFilter = null;
-        
+
         // Use the filter class as the context writer if any
         ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
         if (classLoader == null) {
@@ -203,7 +206,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
         Configuration filterConf = new Configuration(context.getConfiguration());
         Class<? extends KeyValueFilter<K2,V2>> lastFilter = null;
         for (String filterClassName : getDataTypeFilterClassNames()) {
-            
+
             Class<? extends KeyValueFilter<K2,V2>> filterClass = null;
             try {
                 filterClass = (Class<? extends KeyValueFilter<K2,V2>>) Class.forName(filterClassName, true, classLoader);
@@ -211,7 +214,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                     firstFilter = filterClass;
                 }
                 if (lastFilter != null) {
-                    KeyValueFilter<K2,V2> filter = lastFilter.newInstance();
+                    KeyValueFilter<K2,V2> filter = lastFilter.getDeclaredConstructor().newInstance();
                     filter.configureChainedContextWriter(filterConf, filterClass);
                 }
                 lastFilter = filterClass;
@@ -219,9 +222,9 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 throw new IOException("Unable to configure " + filterClass + " on " + lastFilter, e);
             }
         }
-        
+
         Class<? extends ContextWriter<K2,V2>> contextWriterClass;
-        
+
         if (Mutation.class.equals(context.getMapOutputValueClass())) {
             contextWriterClass = (Class<ContextWriter<K2,V2>>) context.getConfiguration().getClass(CONTEXT_WRITER_CLASS, LiveContextWriter.class,
                             ContextWriter.class);
@@ -229,7 +232,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             contextWriterClass = (Class<ContextWriter<K2,V2>>) context.getConfiguration().getClass(CONTEXT_WRITER_CLASS, BulkContextWriter.class,
                             ContextWriter.class);
         }
-        
+
         if (lastFilter != null) {
             try {
                 KeyValueFilter<K2,V2> filter = lastFilter.newInstance();
@@ -240,21 +243,21 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             contextWriterClass = firstFilter;
         }
         try {
-            contextWriter = contextWriterClass.newInstance();
+            contextWriter = contextWriterClass.getDeclaredConstructor().newInstance();
             contextWriter.setup(filterConf, filterConf.getBoolean(CONTEXT_WRITER_OUTPUT_TABLE_COUNTERS, false));
         } catch (Exception e) {
             throw new IOException("Failed to initialized " + contextWriterClass + " from property " + CONTEXT_WRITER_CLASS, e);
         }
-        
+
         metricsEnabled = MetricsConfiguration.isEnabled(context.getConfiguration());
-        
+
         if (metricsEnabled) {
             try {
                 // important that MetricsService gets the unwrapped contextWriter
                 // we don't want metrics on our metrics
                 metricsService = new MetricsService<>(contextWriter, context);
                 metricsLabels = new ReusableMetricsLabels();
-                
+
                 contextWriter = new KeyValueCountingContextWriter<>(contextWriter, metricsService);
             } catch (Exception e) {
                 log.error("Could not configure metrics, disabling", e);
@@ -262,49 +265,53 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 metricsEnabled = false;
             }
         }
-        
+
         validators = ArrayListMultimap.create();
-        
+
         if (null != split) {
             if (filterConf.getBoolean(FILE_NAME_COUNTERS, true)) {
                 getCounter(context, IngestInput.FILE_NAME.name(), split.getPath().toString()).increment(1);
             }
         }
-        
+
         getCounter(context, IngestInput.LINE_BYTES.toString(), "MIN").setValue(Long.MAX_VALUE);
-        
+
         offset = 0;
-        
+
         if (log.isInfoEnabled()) {
             log.info("EventMapper configured. Bulk Ingest = true");
             log.info("EventMapper configured with the following filters: " + getDataTypeFilterClassNames());
         }
-        
+
     }
-    
+
     /**
      * Get the data type handlers for a given type name. This will also fill the dataTypeDiscardIntervalCache and the validators as a side effect.
      *
+     * @param typeStr
+     *            name of the type
+     * @param context
+     *            the context
      * @return the data type handlers
      */
     private List<DataTypeHandler<K1>> loadDataType(String typeStr, Context context) {
         // Do not load the type twice
         if (!typeMap.containsKey(typeStr)) {
-            
+
             typeMap.put(typeStr, new ArrayList<>());
-            
+
             long myInterval = context.getConfiguration().getLong(typeStr + "." + DISCARD_INTERVAL, interval);
-            
+
             dataTypeDiscardIntervalCache.put(typeStr, myInterval);
-            
+
             log.info("Setting up type: " + typeStr + " with interval " + myInterval);
-            
+
             if (!TypeRegistry.getTypeNames().contains(typeStr)) {
                 log.warn("Attempted to load configuration for a type that does not exist in the registry: " + typeStr);
             } else {
                 Type t = TypeRegistry.getType(typeStr);
                 String fieldValidators = context.getConfiguration().get(typeStr + FieldValidator.FIELD_VALIDATOR_NAMES);
-                
+
                 if (fieldValidators != null) {
                     String[] validatorClasses = StringUtils.split(fieldValidators, ",");
                     for (String validatorClass : validatorClasses) {
@@ -320,16 +327,16 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                         }
                     }
                 }
-                
+
                 String[] handlerClassNames = t.getDefaultDataTypeHandlers();
-                
+
                 if (handlerClassNames != null) {
                     for (String handlerClassName : handlerClassNames) {
                         log.info("Configuring handler: " + handlerClassName);
                         try {
                             @SuppressWarnings("unchecked")
                             Class<? extends DataTypeHandler<K1>> clazz = (Class<? extends DataTypeHandler<K1>>) Class.forName(handlerClassName);
-                            DataTypeHandler<K1> h = clazz.newInstance();
+                            DataTypeHandler<K1> h = clazz.getDeclaredConstructor().newInstance();
                             // Create a counter initialized to zero for all handler types.
                             getCounter(context, IngestOutput.ROWS_CREATED.name(), h.getClass().getSimpleName()).increment(0);
                             // Trick here. Set the data.name parameter to type T, then call setup on the DataTypeHandler
@@ -345,7 +352,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                             typeMap.get(typeStr).add(h);
                         } catch (ClassNotFoundException e) {
                             log.error("Error finding DataTypeHandler " + handlerClassName, e);
-                        } catch (InstantiationException | IllegalAccessException e) {
+                        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                             log.error("Error creating DataTypeHandler " + handlerClassName, e);
                         }
                     }
@@ -353,14 +360,14 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             }
             log.info("EventMapper configured with the following handlers for " + typeStr + ": " + typeMap.get(typeStr));
         }
-        
+
         return typeMap.get(typeStr);
     }
-    
+
     private List<String> getDataTypeFilterClassNames() {
-        
+
         SortedMap<Integer,String[]> priorityToFilters = new TreeMap<>();
-        
+
         // The Type Registry contains information on the configured types. Pass back a
         // list of the configured filters in the appropriate priority order.
         for (Type t : TypeRegistry.getTypes()) {
@@ -368,45 +375,44 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 priorityToFilters.put(t.getFilterPriority(), t.getDefaultDataTypeFilters());
             }
         }
-        
+
         // now expand the filters into one list, priority order
         List<String> filters = new ArrayList<>();
         for (String[] value : priorityToFilters.values()) {
             filters.addAll(Arrays.asList(value));
         }
-        
+
         return filters;
     }
-    
+
     public void map(K1 key, V1 value, Context context) throws IOException, InterruptedException {
-        
+
         TraceStopwatch eventMapperTimer = null;
-        
+
         if (metricsEnabled) {
-            eventMapperTimer = new TraceStopwatch("Time in EventMapper");
+            eventMapperTimer = new TraceStopwatch("Time in EventMapper for " + context.getTaskAttemptID());
             eventMapperTimer.start();
         }
-        
+
         // ensure this datatype's handlers etc are loaded such that the dataTypeDiscardIntervalCache and validators are filled as well
         List<DataTypeHandler<K1>> typeHandlers = loadDataType(value.getDataType().typeName(), context);
-        
+
         // This is a little bit fragile, but there is no other way
         // to get the context on a partitioner, and we are only
         // using this to set some counters that collect stats.
         MultiTableRangePartitioner.setContext(context);
-        
+
         Long myInterval = dataTypeDiscardIntervalCache.get(value.getDataType().typeName());
-        
+
         // setup the configuration on the event
         // this is automatically done by the sequence reader....
         // value.setConf(context.getConfiguration());
-        
+
         // Flag to control whether a reprocessed event caused an NDC.push
         boolean reprocessedNDCPush = false;
-        
-        byte[] rawData = value.getRawData();
-        if (rawData != null) {
-            long rawDataBytes = rawData.length;
+
+        long rawDataBytes = value.getDataOutputSize();
+        if (rawDataBytes != -1) {
             getCounter(context, IngestInput.LINE_BYTES.toString(), "TOTAL").increment(rawDataBytes);
             long minBytes = getCounter(context, IngestInput.LINE_BYTES.toString(), "MIN").getValue();
             if (rawDataBytes < minBytes) {
@@ -417,33 +423,33 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 getCounter(context, IngestInput.LINE_BYTES.toString(), "MAX").setValue(rawDataBytes);
             }
         }
-        
+
         // First lets clear this event from the error table if we are reprocessing a previously errored event
         if (value.getAuxData() instanceof EventErrorSummary) {
             EventErrorSummary errorSummary = (EventErrorSummary) (value.getAuxData());
             value.setAuxData(null);
-            
+
             // pass the processedCount through via the aux properties
             value.setAuxProperty(ErrorDataTypeHandler.PROCESSED_COUNT, Integer.toString(errorSummary.getProcessedCount() + 1));
-            
+
             // delete these keys from the error table. If this fails then nothing will have changed
             if (log.isInfoEnabled())
                 log.info("Purging event from the " + errorSummary.getTableName() + " table");
-            
+
             try {
                 // Load error dataType into typeMap
                 loadDataType(TypeRegistry.ERROR_PREFIX, context);
-                
+
                 // purge event
                 errorSummary.purge(contextWriter, context, value, typeMap);
-                
+
                 // Set the original file value from the event in the error table
                 Collection<String> origFiles = errorSummary.getEventFields().get(SEQUENCE_FILE_FIELDNAME);
                 if (!origFiles.isEmpty()) {
                     NDC.push(origFiles.iterator().next());
                     reprocessedNDCPush = true;
                 }
-                
+
             } catch (Exception e) {
                 contextWriter.rollback();
                 log.error("Failed to clean event from error table.  Terminating map", e);
@@ -456,7 +462,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             // pass the processedCount through via the aux properties
             value.setAuxProperty(ErrorDataTypeHandler.PROCESSED_COUNT, "1");
         }
-        
+
         // Determine whether the event date is greater than the interval. Excluding fatal error events.
         if (!value.fatalError() && null != myInterval && 0L != myInterval && (value.getDate() < (now.get() - myInterval))) {
             if (log.isInfoEnabled())
@@ -464,17 +470,17 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             getCounter(context, IngestInput.OLD_EVENT).increment(1);
             return;
         }
-        
+
         // Add the list of handlers with the ALL specified handlers
         List<DataTypeHandler<K1>> handlers = new ArrayList<>();
         handlers.addAll(typeHandlers);
         handlers.addAll(loadDataType(TypeRegistry.ALL_PREFIX, context));
-        
+
         // Always include any event errors in the counters
         for (String error : value.getErrors()) {
             getCounter(context, IngestInput.EVENT_ERROR_TYPE.name(), error).increment(1);
         }
-        
+
         // switch over to the errorHandlerList if still a fatal error
         if (value.fatalError()) {
             // now clear out the handlers to avoid processing this event
@@ -482,35 +488,35 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             if (!value.ignorableError()) {
                 // since this is not an ignorable error, lets add the error handlers back into the list
                 handlers.addAll(loadDataType(TypeRegistry.ERROR_PREFIX, context));
-                
+
                 getCounter(context, IngestInput.EVENT_FATAL_ERROR).increment(1);
                 getCounter(context, IngestInput.EVENT_FATAL_ERROR.name(), "ValidationError").increment(1);
             } else {
                 getCounter(context, IngestInput.EVENT_IGNORABLE_ERROR).increment(1);
                 getCounter(context, IngestInput.EVENT_IGNORABLE_ERROR.name(), "IgnorableError").increment(1);
             }
-            
+
             context.progress();
         }
-        
+
         Multimap<String,NormalizedContentInterface> fields = HashMultimap.create();
         try {
             processEvent(key, value, handlers, fields, context);
         } catch (Exception e) {
             // Rollback anything written for this event
             contextWriter.rollback();
-            
+
             // Fail job on constraint violations
             if (e instanceof ConstraintChecker.ConstraintViolationException) {
                 throw ((RuntimeException) e);
             }
-            
+
             // ensure they know we are still working on it
             context.progress();
-            
+
             // log error
             log.error("Runtime exception processing event", e);
-            
+
             // now lets dump to the errors table
             // first set the exception on the event if not a field normalization error in which case the fields contain the errors
             if (!(e instanceof FieldNormalizationError)) {
@@ -529,7 +535,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                     throw new IOException("Failed to process error data handlers for an event", e2);
                 }
             }
-            
+
             // now create some counters
             getCounter(context, IngestProcess.RUNTIME_EXCEPTION).increment(1);
             List<String> exceptions = getExceptionSynopsis(e);
@@ -545,25 +551,27 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             contextWriter.commit(context);
             context.progress();
         }
-        
+
         getCounter(context, IngestOutput.EVENTS_PROCESSED.name(), value.getDataType().typeName().toUpperCase()).increment(1);
-        
+
         offset++;
-        
+
         if (metricsEnabled && eventMapperTimer != null) {
             eventMapperTimer.stop();
             long timeInEventMapper = eventMapperTimer.elapsed(TimeUnit.MILLISECONDS);
-            
+
             metricsLabels.clear();
             metricsLabels.put("dataType", value.getDataType().typeName());
             metricsService.collect(Metric.MILLIS_IN_EVENT_MAPPER, metricsLabels.get(), fields, timeInEventMapper);
         }
     }
-    
+
     /**
      * Get an exception synopsis that is suitable as a counter. We want at a minimum the exception name and a useful location. A useful location is defined as
      * the highest location that is in the datawave.ingest package
      *
+     * @param e
+     *            the exception to check
      * @return A synopsis of the exception
      */
     private List<String> getExceptionSynopsis(Throwable e) {
@@ -573,10 +581,10 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             exceptions.push(e);
             e = e.getCause();
         }
-        
+
         List<String> synopsis = new ArrayList<>();
         StringBuilder buffer = new StringBuilder();
-        
+
         boolean foundTrace = false;
         while (!foundTrace && !exceptions.isEmpty()) {
             e = exceptions.pop();
@@ -597,7 +605,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 }
             }
         }
-        
+
         // NOTE: By definition, this method is only called by datawave.ingest.EventMapper, and only
         // available to be called by this class the condition on line 542 will always be satisfied
         // and so 'foundTrace' will always be set to true. So, this code can eventually be removed.
@@ -606,13 +614,13 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             buffer.append(e.getClass().getName());
             synopsis.add(buffer.toString());
         }
-        
+
         return synopsis;
     }
-    
+
     @Override
     public void cleanup(Context context) throws IOException, InterruptedException {
-        
+
         // Write the metadata to the output
         for (List<DataTypeHandler<K1>> handlers : typeMap.values()) {
             for (DataTypeHandler<K1> h : handlers)
@@ -624,21 +632,21 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                     }
                 }
         }
-        
+
         // dump any unflushed metrics
         if (metricsEnabled) {
             metricsService.close();
         }
-        
+
         // cleanup the context writer
         contextWriter.cleanup(context);
-        
+
         for (List<DataTypeHandler<K1>> handlers : typeMap.values()) {
             for (DataTypeHandler<K1> h : handlers)
                 h.close(context);
         }
         typeMap.clear();
-        
+
         // Add the counters from the standalone reporter to this context.
         Counters counters = reporter.getCounters();
         for (CounterGroup cg : counters) {
@@ -646,15 +654,15 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 getCounter(context, cg.getName(), c.getName()).increment(c.getValue());
             }
         }
-        
+
         super.cleanup(context);
-        
+
         // we pushed the filename on the NDC if split is non null, so pop it here.
         if (null != split) {
             NDC.pop();
         }
     }
-    
+
     /**
      * This is where we apply a list of handlers to an event.
      *
@@ -669,18 +677,19 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
      * @param context
      *            The context
      * @throws Exception
+     *             if there is a problem
      */
     public void processEvent(K1 key, RawRecordContainer value, List<DataTypeHandler<K1>> handlers, Multimap<String,NormalizedContentInterface> fields,
                     Context context) throws Exception {
         IngestHelperInterface previousHelper = null;
-        
+
         for (DataTypeHandler<K1> handler : handlers) {
             if (log.isTraceEnabled())
                 log.trace("executing handler: " + handler.getClass().getName());
-            
+
             // gather the fields
             IngestHelperInterface thisHelper = handler.getHelper(value.getDataType());
-            
+
             // This handler has no helper for the event's data type. Therefore, we should
             // just move on to the next handler. This can happen, for example, with the
             // edge handler, depending on the event's data type.
@@ -689,7 +698,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                     log.trace("Aborting processing due to null ingest helper");
                 continue;
             }
-            
+
             // Try to only parse the event once. Parse the event on the first pass and only if
             // the BaseIngestHelper class differs. The same class used by different handlers
             // *should* produce the same result.
@@ -706,43 +715,43 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 if (e != null) {
                     throw new FieldNormalizationError("Failed getting all fields", e);
                 }
-                
+
                 // Event based metrics
                 if (metricsEnabled) {
                     metricsLabels.clear();
                     metricsLabels.put("dataType", value.getDataType().typeName());
-                    
+
                     metricsService.collect(Metric.EVENT_COUNT, metricsLabels.get(), fields, 1L);
                     metricsService.collect(Metric.BYTE_COUNT, metricsLabels.get(), fields, (long) value.getRawData().length);
                 }
-                
+
                 previousHelper = thisHelper;
             }
-            
+
             Collection<FieldValidator> fieldValidators = validators.get(value.getDataType().outputName());
             for (FieldValidator validator : fieldValidators) {
                 validator.validate(value, fields);
             }
-            
+
             executeHandler(key, value, fields, handler, context);
-            
+
             context.progress();
         }
     }
-    
+
     private static class FieldNormalizationError extends Exception {
         private static final long serialVersionUID = 1L;
-        
+
         public FieldNormalizationError(String message, Throwable cause) {
             super(message, cause);
         }
     }
-    
+
     public Multimap<String,NormalizedContentInterface> getFields(RawRecordContainer value, DataTypeHandler<K1> handler) throws Exception {
         Multimap<String,NormalizedContentInterface> newFields;
         // Parse the event into its field names and field values using the DataTypeHandler's BaseIngestHelper object.
         newFields = handler.getHelper(value.getDataType()).getEventFields(value);
-        
+
         // Also get the virtual fields, if applicable.
         if (handler.getHelper(value.getDataType()) instanceof VirtualIngest) {
             VirtualIngest vHelper = (VirtualIngest) handler.getHelper(value.getDataType());
@@ -761,68 +770,68 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 newFields.putAll(fieldName, compositeFields.get(fieldName));
             }
         }
-        
+
         // Create a LOAD_DATE parameter, which is the current time in milliseconds, for all datatypes
         long loadDate = now.get();
         NormalizedFieldAndValue loadDateValue = new NormalizedFieldAndValue(LOAD_DATE_FIELDNAME, Long.toString(loadDate));
         // set an indexed field value for use by the date index data type handler
         loadDateValue.setIndexedFieldValue(dateNormalizer.normalizeDelegateType(new Date(loadDate)));
         newFields.put(LOAD_DATE_FIELDNAME, loadDateValue);
-        
+
         String seqFileName = null;
-        
+
         // place the sequence filename into the event
         if (createSequenceFileName) {
             seqFileName = NDC.peek();
-            
+
             if (trimSequenceFileName) {
                 seqFileName = StringUtils.substringAfterLast(seqFileName, "/");
             }
-            
+
             if (null != seqFileName) {
                 StringBuilder seqFile = new StringBuilder(seqFileName);
-                
+
                 seqFile.append(SRC_FILE_DEL).append(offset);
-                
+
                 if (null != splitStart) {
                     seqFile.append(SRC_FILE_DEL).append(splitStart);
                 }
-                
+
                 newFields.put(SEQUENCE_FILE_FIELDNAME, new NormalizedFieldAndValue(SEQUENCE_FILE_FIELDNAME, seqFile.toString()));
             }
         }
-        
+
         if (createRawFileName && !value.getRawFileName().isEmpty() && !value.getRawFileName().equals(seqFileName)) {
             newFields.put(RAW_FILE_FIELDNAME, new NormalizedFieldAndValue(RAW_FILE_FIELDNAME, value.getRawFileName()));
         }
-        
+
         // Also if this helper needs to filter the fields before returning, apply now
         if (handler.getHelper(value.getDataType()) instanceof FilterIngest) {
             FilterIngest fHelper = (FilterIngest) handler.getHelper(value.getDataType());
             fHelper.filter(newFields);
         }
-        
+
         return newFields;
     }
-    
+
     @SuppressWarnings("unchecked")
     public void executeHandler(K1 key, RawRecordContainer event, Multimap<String,NormalizedContentInterface> fields, DataTypeHandler<K1> handler,
                     Context context) throws Exception {
         long count = 0;
-        
+
         TraceStopwatch handlerTimer = null;
-        
+
         // Handler based metrics
         if (metricsEnabled) {
-            
+
             handlerTimer = new TraceStopwatch("Time in handler");
             handlerTimer.start();
         }
-        
+
         // In the setup we determined whether or not we were performing bulk ingest. This tells us which
         // method to call on the DataTypeHandler interface.
         Multimap<BulkIngestKey,Value> r;
-        
+
         if (!(handler instanceof ExtendedDataTypeHandler)) {
             r = handler.processBulk(key, event, fields, new ContextWrappedStatusReporter(getContext(context)));
             if (r == null) {
@@ -839,38 +848,38 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 getCounter(context, IngestInput.EVENT_FATAL_ERROR.name(), "NegOneCount").increment(1);
             }
         }
-        
+
         // Update the counters
         if (count > 0) {
             getCounter(context, IngestOutput.ROWS_CREATED.name(), handler.getClass().getSimpleName()).increment(count);
             getCounter(context, IngestOutput.ROWS_CREATED).increment(count);
         }
-        
+
         if (handler.getMetadata() != null) {
             handler.getMetadata().addEvent(handler.getHelper(event.getDataType()), event, fields, now.get());
         }
-        
+
         if (metricsEnabled && handlerTimer != null) {
             handlerTimer.stop();
             long handlerTime = handlerTimer.elapsed(TimeUnit.MILLISECONDS);
-            
+
             metricsLabels.clear();
             metricsLabels.put("dataType", event.getDataType().typeName());
             metricsLabels.put("handler", handler.getClass().getName());
             metricsService.collect(Metric.MILLIS_IN_HANDLER, metricsLabels.get(), fields, handlerTime);
-            
+
             if (contextWriter instanceof KeyValueCountingContextWriter) {
                 ((KeyValueCountingContextWriter) contextWriter).writeMetrics(event, fields, handler);
             }
         }
     }
-    
+
     public ContextWriter<K2,V2> getContextWriter() {
         return this.contextWriter;
     }
-    
+
     public Map<String,List<DataTypeHandler<K1>>> getHandlerMap() {
         return this.typeMap;
     }
-    
+
 }
